@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2010 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -155,9 +155,9 @@ public class FeatureImport extends VersionableObject implements IFeatureImport {
 
 	public void setPatch(boolean patch) throws CoreException {
 		ensureModelEditable();
-		Boolean oldValue = new Boolean(this.fPatch);
+		Boolean oldValue = Boolean.valueOf(this.fPatch);
 		this.fPatch = patch;
-		firePropertyChanged(P_PATCH, oldValue, new Boolean(patch));
+		firePropertyChanged(P_PATCH, oldValue, Boolean.valueOf(patch));
 	}
 
 	public void restoreProperty(String name, Object oldValue, Object newValue) throws CoreException {
