@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2000, 2014 IBM Corporation and others.
+ *  Copyright (c) 2000, 2015 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -84,7 +84,7 @@ public class FeaturePlugin extends FeatureData implements IFeaturePlugin {
 		ensureModelEditable();
 		boolean oldValue = fUnpack;
 		this.fUnpack = unpack;
-		firePropertyChanged(this, P_UNPACK, new Boolean(oldValue), new Boolean(unpack));
+		firePropertyChanged(this, P_UNPACK, Boolean.valueOf(oldValue), Boolean.valueOf(unpack));
 	}
 
 	public void restoreProperty(String name, Object oldValue, Object newValue) throws CoreException {
