@@ -1,5 +1,5 @@
 /*******************************************************************************
- *  Copyright (c) 2000, 2012 IBM Corporation and others.
+ *  Copyright (c) 2000, 2015 IBM Corporation and others.
  *  All rights reserved. This program and the accompanying materials
  *  are made available under the terms of the Eclipse Public License v1.0
  *  which accompanies this distribution, and is available at
@@ -135,9 +135,9 @@ public class PluginLibrary extends PluginObject implements IPluginLibrary {
 
 	public void setExported(boolean value) throws CoreException {
 		ensureModelEditable();
-		Boolean oldValue = new Boolean(fExported);
+		Boolean oldValue = Boolean.valueOf(fExported);
 		fExported = value;
-		firePropertyChanged(P_EXPORTED, oldValue, new Boolean(value));
+		firePropertyChanged(P_EXPORTED, oldValue, Boolean.valueOf(value));
 	}
 
 	public void setType(String type) throws CoreException {
